<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.notifications.NotificationsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/aarogyaSetuCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/govtApp"
                            android:textColor="#47B1EF"
                            android:textSize="24sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/subTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title"
                            android:text="@string/govtText"
                            android:textSize="16sp"
                            android:textStyle="italic">

                        </TextView>

                        <TextView
                            android:id="@+id/downloadOrInstalled"
                            android:layout_alignEnd="@+id/title"
                            android:layout_marginEnd="35dp"
                            android:layout_marginTop="7dp"
                            android:textColor="#2962FF"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            tools:ignore="RtlHardcoded" />

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/appInstalled"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="2dp"
                                android:scaleX="1.8"
                                android:scaleY="1.8"
                                app:lottie_fileName="complete.json"
                                app:lottie_loop="true"
                                app:lottie_autoPlay="true">
                            </com.airbnb.lottie.LottieAnimationView>

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/playStore"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="2dp"
                                android:scaleX="2"
                                android:scaleY="2"
                                app:lottie_fileName="playstore.json"
                                app:lottie_loop="true"
                                app:lottie_autoPlay="true">
                            </com.airbnb.lottie.LottieAnimationView>

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/Instructions"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_below="@id/subTitle"
                            android:layout_alignParentStart="true"
                            android:scaleX="2"
                            android:scaleY="2"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="5dp"
                            app:lottie_fileName="safety.json"
                            app:lottie_loop="true"
                            app:lottie_autoPlay="true">
                        </com.airbnb.lottie.LottieAnimationView>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/aarogyaSetuCard"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/webLinks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/webLinks"
                            android:textColor="#64DD17"
                            android:textSize="24sp"
                            android:textStyle="bold">
                        </TextView>

                        <LinearLayout
                            android:id="@+id/linksLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="16dp"
                            android:weightSum="3"
                            android:layout_below="@id/webLinks">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/webPage"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                app:lottie_fileName="web.json"
                                app:lottie_loop="true"
                                app:lottie_autoPlay="true">
                            </com.airbnb.lottie.LottieAnimationView>

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/facebookPage"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_weight="1"
                                app:lottie_fileName="fb.json"
                                app:lottie_loop="false"
                                app:lottie_autoPlay="true"/>
                            <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/twitterPage"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            app:lottie_fileName="twitter.json"
                            app:lottie_loop="false"
                            app:lottie_autoPlay="true"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3"
                            android:layout_alignBottom="@id/linksLayout">

                            <TextView
                                android:layout_width="48dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:text="@string/ministryText" />

                            <TextView
                                android:layout_width="48dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:text="@string/facebookText" />

                            <TextView
                                android:layout_width="48dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:text="@string/twitterText" />

                        </LinearLayout>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>